# airas-20251022-092125-matsuzawa

./: README.md  pyproject.toml
.github/workflows/: run_full_experiment_with_open_code.yml  run_full_experiment_with_open_code_2.yml  run_trial_experiment_with_open_code.yml  run_trial_experiment_with_open_code_2.yml
.research/: research_history.json
.research/iteration1/: config.yaml  stderr.txt  stdout.txt
.research/latex/iclr2024/: paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_details.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/extract_reference_titles_subgraph/: extract_reference_titles_1.txt
.research/prompt/html_subgraph/: convert_to_html.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
.research/prompt/latex_subgraph/: convert_to_latex_str.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_github_url_from_text_0.txt
.research/prompt/review_paper_subgraph/: review_paper.txt
branches/main/: index.html
config/: config.yaml
config/run/: comparative-1-ResNet-18-11.7-M--CIFAR-10.yaml  proposed-ResNet-18-11.7-M--CIFAR-10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+2 files in other folders)
