[project]
name = "boil-uc-experiments"
version = "0.1.0"
description = "Experiments for BOIL & BOIL-UC on CIFAR-10 with Hydra configuration"
authors = [{name = "AI Researcher", email = "research@ai.example.com"}]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "optuna>=3.5",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
]
